# python-rust-bindings

./: .gitignore  README.md  main.py  test.txt
lib/: rusted.pyd
rust_src/: Cargo.toml
rust_src/src/: lib.rs
