[package]
name = "rusted"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rusted"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "*"
rand = "0.8.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
